# sorting-hat

./: .env  Cargo.toml  README.md  docker-compose.yml  run.bat  run.sh
front/: package-lock.json
front/src/: App.css  App.js
front/src/Componentes/header/: header.css  heder.js
migrations/2023-08-19-183544_teste/: up.sql
migrations/2023-08-19-230813_init/: down.sql  up.sql
migrations/2023-08-27-193315_populate_questions/: up.sql
src/: main.rs  models.rs  schema.rs
src/routes/: mod.rs
